--- a/src/main/java/sz/dialog/DeleteUsers.form
+++ b/src/main/java/sz/dialog/DeleteUsers.form
@@ -130,6 +130,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton5">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="cc" red="0" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="YA"/>
           </Properties>
           <Events>
