--- a/src/main/java/sz/dialog/EditDataUsers.form
+++ b/src/main/java/sz/dialog/EditDataUsers.form
@@ -159,6 +159,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton2">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="cc" red="0" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="SIMPAN"/>
           </Properties>
         </Component>
