--- a/src/main/java/sz/panel/LaporanKeuangan.form
+++ b/src/main/java/sz/panel/LaporanKeuangan.form
@@ -79,7 +79,7 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Laporan Keuangan Harian"/>
+        <Property name="text" type="java.lang.String" value="Laporan Keuangan "/>
       </Properties>
     </Component>
     <Component class="javax.swing.JSeparator" name="jSeparator1">
