--- a/src/main/java/szn/DashboardKasir.form
+++ b/src/main/java/szn/DashboardKasir.form
@@ -166,7 +166,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Laporan Harian"/>
+            <Property name="text" type="java.lang.String" value="Laporan Keuangan"/>
             <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
               <Color id="Hand Cursor"/>
             </Property>
